--- a/Ass2PRN231/Ass2PRN231/appsettings.json
+++ b/Ass2PRN231/Ass2PRN231/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=MSI\\EVE;Database=Ass2PRN231;User=sa;Password=12345;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=(local);Database=Ass2PRN231;User=sa;Password=123465789;TrustServerCertificate=True;"
   }
 }
