fix api user, publisher
fix api user, publisher

--- a/Ass2_WebRazor/Ass2_WebRazor/Ass2_WebRazor.csproj
+++ b/Ass2_WebRazor/Ass2_WebRazor/Ass2_WebRazor.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Publishers\" />
+    <Folder Include="Pages\Users\" />
+  </ItemGroup>
+
 </Project>
