--- a/Ass2PRN231/Ass2PRN231/appsettings.json
+++ b/Ass2PRN231/Ass2PRN231/appsettings.json
@@ -5,8 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
+  /*"AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=MSI;Database=Ass2PRN231;User=sa;Password=12345;TrustServerCertificate=True;"
+  },*/
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-P5DTMBPR\\SQLEXPRESS;Database=Ass2PRN231;User=sa;Password=1234567890;TrustServerCertificate=True;"
   }
 }
