--- a/Ass2PRN231/Ass2PRN231/appsettings.json
+++ b/Ass2PRN231/Ass2PRN231/appsettings.json
@@ -10,6 +10,6 @@
     "DefaultConnection": "Server=MSI;Database=Ass2PRN231;User=sa;Password=12345;TrustServerCertificate=True;"
   },*/
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-P5DTMBPR\\SQLEXPRESS;Database=Ass2PRN231;User=sa;Password=1234567890;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=(local);Database=Ass2PRN231;User=sa;Password=123456789;TrustServerCertificate=True;"
   }
 }
