--- a/Ass2PRN231/Ass2PRN231/appsettings.json
+++ b/Ass2PRN231/Ass2PRN231/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=MSI;Database=Ass2PRN231;User=sa;Password=12345;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "fqevanolvcmlgmbfkwfnwpzqehnzysja"
   }
 }
