--- a/Ass2PRN231/Ass2PRN231/appsettings.json
+++ b/Ass2PRN231/Ass2PRN231/appsettings.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  /*"AllowedHosts": "*",
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=MSI;Database=Ass2PRN231;User=sa;Password=12345;TrustServerCertificate=True;"
   },
