--- a/Ass2PRN231/Ass2PRN231/appsettings.json
+++ b/Ass2PRN231/Ass2PRN231/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=MSI;Database=Ass2PRN231;User=sa;Password=12345;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=LAPTOP-P5DTMBPR\\SQLEXPRESS;Database=Ass2PRN231;User=sa;Password=1234567890;TrustServerCertificate=True;"
   },
   "Jwt": {
     "Key": "fqevanolvcmlgmbfkwfnwpzqehnzysja"
